# cpp-project

./: .gitignore  CMakeLists.txt  README.md  build.py
app/: CMakeLists.txt  app.cc
